# ZaiGame

./: .gitignore  CMakeLists.txt  README.md  ZaiGame.sln  ZaiGame.vcxproj  ZaiGame.vcxproj.filters
include/: Constants.h  FlappyAI.h  Game.h  Menu.h  NeuralNetwork.h
src/: FlappyAI.cpp  Game.cpp  Menu.cpp  NeuralNetwork.cpp
